# elma-cli

./: .gitignore  .openclaude-profile.json  AGENTS.md  AGENTS_concise.md  CODEOWNERS  Cargo.toml  GEMINI.md  IMPLEMENTATION_SUMMARY.md  QWEN.md  README.md  TASK_WIRING_UNUSED_CRATES.md  TEST_PLAN.md  dependency_analysis.md  document_adapter_tmp.rs  dup2  elma.toml  findings.txt  fix_all.py  fix_extract_methods.py  fix_initializers.py  fix_step_initializers.py  fix_struct.py  memory_profiling_report.md  probe_parsing.sh  probe_path.rs  reliability_probe.sh  run_intention_scenarios.sh  run_sloppy_tests_cli.sh  run_stress_cli.sh  run_stress_tests.sh  run_stress_tests_cli.sh  smoke_llamacpp.sh  stress_results_20260421_024126.txt  stress_results_20260421_025017.txt  stress_results_20260421_025952.txt  stress_results_20260421_030138.txt  ui_parity_probe.sh
_knowledge_base/_chat_text_skill/FlockParser/: .env.example  .gitignore  CHANGELOG.md  CHROMADB_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  ERROR_HANDLING.md  GPU_ROUTER_SETUP.md  KNOWN_ISSUES.md  MANIFEST.in  NODE_MANAGEMENT.md  VRAM_MONITORING.md  async_embedder.py  benchmark_comparison.py  docker-compose.yml  fix_code_quality.py  flock_mcp_server.py  flockparsecli.py  flockparser_api_server.py  gpu-router.service  gpu_controller.py  gpu_router_daemon.py  profile_pdf_processing.py  pyproject.toml  quick_test_embed.py  restart_flockparser.sh  run_check_deps.py  setup.py  start_flockparser_unbuffered.sh
_knowledge_base/_chat_text_skill/FlockParser/.github/workflows/: ci.yml
_knowledge_base/_chat_text_skill/FlockParser/tests/: __init__.py  test_80_percent.py  test_chat.py  test_comprehensive.py  test_core.py  test_coverage_boost.py  test_embeddings.py  test_final_80.py  test_load_balancer.py  test_to_80.py  test_utilities.py
_knowledge_base/_chat_text_skill/FlockParser/tools/: verify_sollol_access.py
_knowledge_base/_source_code_agents/kolosal/: .gitmodules  CMakeLists.txt  CMakeSettings.json
_knowledge_base/_source_code_agents/kolosal/.github/: FUNDING.yml
_knowledge_base/_source_code_agents/kolosal/.github/workflows/: lint.yml
_knowledge_base/_source_code_agents/kolosal/include/: common.hpp  config.hpp  threadpool.hpp
_knowledge_base/_source_code_agents/kolosal/include/crypto/: crypto.hpp
_knowledge_base/_source_code_agents/kolosal/include/model/: model.hpp  model_loader_config_persistence.hpp  model_manager.hpp  model_persistence.hpp  preset.hpp  preset_manager.hpp  server_state_manager.hpp
_knowledge_base/_source_code_agents/kolosal/include/ui/: markdown.hpp  model_manager_modal.hpp  title_bar.hpp
_knowledge_base/_source_code_agents/kolosal/include/window/: dx10_context.hpp  win32_window.hpp  window_composition_attribute.hpp
_knowledge_base/_source_code_agents/kolosal/models/: bahasa-ai-4b.json  deepseek-r1-llama-8b.json  deepseek-r1-qwen2.5-1.5b.json  deepseek-r1-qwen2.5-14b.json  deepseek-r1-qwen2.5-7b.json  gemma-2-2b.json  gemma-2-9b-sahabat.json  gemma-2-9b.json  gemma-3-12b.json  gemma-3-27b.json  gemma-3-4b.json  llama-3-8b-sahabat.json  llama-3.1-8b.json  llama-3.2-1b.json  llama-3.2-3b.json  phi-4-14b.json  qwen-3-0.6b.json  qwen-3-30b-a3b.json  qwen-3-32b.json  qwen2.5-1.5b.json  qwen2.5-7b.json  qwen2.5-coder-7b.json
_knowledge_base/_source_code_agents/kolosal/server-test/python/: openai_test_2.py
_knowledge_base/_source_code_agents/kolosal/source/: main.cpp
_stress_testing/opencrabs/: .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TESTING.md  commands.toml.example  keys.toml.example  tools.toml.example
_stress_testing/opencrabs/.github/: CODEOWNERS
_stress_testing/opencrabs/.github/workflows/: release.yml
_stress_testing/opencrabs/src/: main.rs  pricing.rs
_stress_testing/opencrabs/src/a2a/: agent_card.rs  persistence.rs  server.rs  types.rs
_stress_testing/opencrabs/src/a2a/handler/: stream.rs  tasks.rs
_stress_testing/opencrabs/src/app/: mod.rs  state.rs
_stress_testing/opencrabs/src/assets/: icon.icns
_stress_testing/opencrabs/src/benches/: database.rs
_stress_testing/opencrabs/src/brain/: commands.rs  mod.rs  prompt_builder_tests.rs  self_update.rs  tokenizer.rs
_stress_testing/opencrabs/src/brain/agent/: mod.rs
_stress_testing/opencrabs/src/brain/provider/: custom_openai_compatible.rs  placeholder.rs  types.rs
_stress_testing/opencrabs/src/brain/tools/: analyze_image.rs  brave_search.rs  context.rs  (+24 more)
_stress_testing/opencrabs/src/channels/: manager.rs  mod.rs  tests.rs
_stress_testing/opencrabs/src/cli/: commands.rs  daemon_health.rs  ui.rs
_stress_testing/opencrabs/src/config/: crabrace.rs  health.rs  profile.rs  secrets.rs
_stress_testing/opencrabs/src/db/: database.rs  models.rs
_stress_testing/opencrabs/src/docker/: .dockerignore  Dockerfile
_stress_testing/opencrabs/src/logging/: logger.rs  mod.rs
_stress_testing/opencrabs/src/memory/: embedding.rs
_stress_testing/opencrabs/src/migrations/: 20251028000001_initial_schema.sql  20251028000002_modernize_schema.sql  20251111000001_add_plans.sql  20260305000002_add_cron_jobs.sql  20260306000001_add_usage_ledger.sql  20260308000001_add_pending_requests.sql  20260330000001_pending_requests_channel_chat_id.sql
_stress_testing/opencrabs/src/services/: context.rs  file.rs  message.rs
_stress_testing/opencrabs/src/tests/: candle_whisper_test.rs  channel_search_test.rs  cli_arg_too_long_test.rs  collapse_build_output_test.rs  context_window_test.rs  custom_provider_test.rs  evolve_test.rs  gemini_fetch_test.rs  integration_test.rs  onboarding_brain_test.rs  onboarding_field_nav_test.rs  onboarding_keys_test.rs  openai_provider_test.rs  opencode_provider_test.rs  plan_document_test.rs  provider_sync_test.rs  qr_render_test.rs  queued_message_test.rs  reasoning_lines_test.rs  self_healing_test.rs  slack_fmt_test.rs  split_pane_test.rs  tui_error_test.rs  usage_ledger_test.rs
_stress_testing/opencrabs/src/tui/: highlight.rs  markdown.rs  mod.rs  onboarding_render.rs  plan.rs  provider_selector.rs  splash.rs
_stress_testing/opencrabs/src/utils/: mod.rs  providers.rs  retry.rs
(+4357 files in other folders)
