[package]
name = "elma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
jsonrepair-rs = "0.1.0"
ignore = "0.4"
futures = "0.3"
which = "7.0"
