[package]
name = "elma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "process"] }
jsonrepair-rs = "0.1.0"
ignore = "0.4"
futures = "0.3"
which = "7.0"
atty = "0.2"
crossterm = "0.28"
ratatui = "0.26"
unicode-width = "0.2"
indicatif = "0.17"
inquire = "0.7"
syntect = "5.2"
similar = "2.6"

[dev-dependencies]
# UI parity test harness
portable-pty = "0.6"
vt100 = "0.15"
strip-ansi-escapes = "0.1"
insta = "1.47"
serde_yaml = "0.9"
tokio = { version = "1.37", features = ["rt", "time", "io-util"] }
